feat: added category controllers & routes
